@@ -3,6 +3,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - Using "jquery-unveil" plugin for heatmaps
  - Removing data from DOM after passing them to local variables
  - Nulling variables after using them for bcviz to free memory
+ - Moved simplified file name generation to this package
 
 release 58.5
  - stop using depricated Class::MOP::load_class method
